--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Rx = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
+pytest = "^6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
