--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ blinker = "^1.4"
 [tool.poetry.dev-dependencies]
 black = "^21.9b0"
 pytest = "^6.2.5"
+uvicorn = "^0.17.0"
+starlette = "^0.17.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
